<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"
        android:typeface="normal"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:elevation="4dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/wallpaper_manager_enabled" />

            <ImageView
                android:id="@+id/portraitImageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/portrait_wallpaper_image"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <Button
                android:id="@+id/setPortraitWallpaperButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_portrait_wallpaper" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <ImageView
                android:id="@+id/landscapeImageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/landscape_wallpaper_image"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <Button
                android:id="@+id/setLandscapeWallpaperButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_landscape_wallpaper" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
